# qbind

./: .gitignore  CMakeLists.txt  KX.md  README.md  xb
cmake/: FindKDB.cmake
include/: CMakeLists.txt
include/qbind/: adapter.h  atom.h  converter.h  dictionary.h  forward.h  function.h  iterator.h  k.h  map.h  memory_manager.h  nested_vector.h  ref.h  span.h  symbol.h  tuple.h  type.h  untyped_span.h  utils.h  vector.h
include/qbind/old/: ref.h  span.h  type.h  untyped_span.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  main.cpp  test_kx.cpp  test_macros.cpp  test_span.cpp
tests/kdb/: CMakeLists.txt  add.cpp
tools/: CMakeLists.txt
tools/connection/: CMakeLists.txt  c.java  main.cpp
tools/kdb/: start.sh
tools/kdb/src/: q.q
tools/playground/: CMakeLists.txt  main.cpp
